data/derived/comb/progs/unify/prog8500.ml.out
Characters 42-47:
  let x = List.map (l*i) l in
                   ^^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'b
